# cpyvpn

./: LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py
cpyvpn/: auth.py  client.py  crt.py  cui.py  ma.py  rsa.py  server.py  trutils.py  utils.py  vna.py
