[metadata]
author=Nikolay A. Krylov
author_email=krylovna@gmail.com
url=https://gitlab.com/cpvpn/cpyvpn
description=Check Point VPN client written in Python.
long_description=README.md
license=GPL3
python_requires=>=3.7
classifiers=
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: System :: Networking
    Operating System :: POSIX
    Operating System :: Unix
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Development Status :: 4 - Beta
    Intended Audience :: End Users/Desktop
    Intended Audience :: Developers

[options]
zip_safe = True
include_package_data = True
